--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 
 <h1>Ferdouille</h1>
-<p>My first paragraph.</p>
+<p>Je m'appelle Océane d'amour et j'aime sniffer ferdoudze.</p>
 
 </body>
 </html>
