--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
 <body>
 
+<script>
+    window.location.replace("https://open.spotify.com/artist/4GiJRTpsxLqL9tvxcSplxt");
+</script>
+
 <h1>Ferdouille</h1>
 <p>Je m'appelle Océane d'amour et j'aime sniffer ferdoudze.</p>
 
