--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 
 <script>
-    window.location.replace("https://open.spotify.com/artist/4GiJRTpsxLqL9tvxcSplxt");
+    window.location.replace("https://open.spotify.com/artist/4GiJRTpsxLqL9tvxcSplxt?si=j56peQ5NRlGhgqwQhppSDg");
 </script>
 
 <h1>Ferdouille</h1>
